--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,15 @@
 {
     "manifest_version": 2,
     "name": "whats-audio",
-    "version": "0.1",
+    "version": "1.0",
+    "description": "Uma extensão para ouvir os seus audios do WhatsApp na velocidade que desejar.",
+    "icons": {
+        "16": "./icons/logo-16.png",
+        "24": "./icons/logo-24.png",
+        "32": "./icons/logo-32.png",
+        "48": "./icons/logo-48.png",
+        "128": "./icons/logo-128.png"
+    },
     "content_scripts": [
         {
             "matches": ["https://web.whatsapp.com/"],
